fixed illustration gap

--- a/landing/app/styles/main.scss
+++ b/landing/app/styles/main.scss
@@ -90,8 +90,8 @@ section#splash {
   & #landscape {
     width: 100%;
     margin-top: 50px;
-    margin-bottom: 0px;
     line-height: 1;
+    margin-bottom: -10px;
   }
 }
 
